# tardis

./: .gitignore  LICENSE  PLEASE_README.md  PLEDGE.md  POST_MORTEM.md  README.md  REFACTORING_CHECKLIST.md  TODO  anita_installer.bat  example.env  generate_ssg.py  main.py  output.html  pyproject.toml  pytest.ini  requirements.txt  seedmakinghelper.py  start.bat  tree.py
anita-template/: .gitignore  README  anita-default.db
backend/admin/: manager.py  router.py  schema.py
backend/article/: manager.py  router.py  service.py
backend/articles/: manager.py  router.py  schema.py  service.py
backend/auth/: manager.py  router.py  schema.py  service.py
backend/collections/: manager.py  pb.py  router.py  schema.py  service.py
backend/pages/: manager.py  router.py  service.py
backend/public/: service.py
backend/site/: manager.py  router.py  schema.py  service.py
backend/sites/: manager.py  router.py  service.py
backend/storage/: manager.py  router.py  schema.py  service.py
backend/users/: manager.py  router.py  schema.py  (+1 more)
data/: database.py  models.py  schemas.py
routes/: admin_route.py  aina_route.py  api_route.py  asta_route.py  auth_route.py  collections_route.py  config_route.py  dashboard_route.py  file_route.py  media_route.py  pages_route.py  public_route.py  roles_route.py
services/: .gitignore  aina.py  asta.py  auth.py  collections.py  config.py  dashboard.py  labels.py  media.py  pages.py  users.py
src/: .gitignore  alpine_generator.py  audit.py  dependencies.py  embeds_generator.py  ssg_generator.py
tests/: conftest.py  test_auth.py
(+125 files in other folders)
