[project]
name = "anita-cms"
version = "0.38.0"
description = "A CMS Built From Ground Up with Fast API, Vanilla JS, and SQlite."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "cryptography==45.0.2",
    "ecdsa==0.19.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "fastapi-csrf-protect==1.0.7",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "nh3==0.3.2",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec>=0.12.1",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pytest==9.0.2",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "resend==2.10.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "starlette==0.46.2",
    "tomli==2.3.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
]
